training and conditional

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ scipy
 onnx
 onnxruntime
 
-python main.py --batch_size 1 --no_aux_loss --eval --resume /root/autodl-tmp/Transformer-Series/checkpoints/detr-r50-e632da11.pth --coco_path /root/autodl-tmp/coco
+# python main.py --batch_size 1 --no_aux_loss --eval --resume /root/autodl-tmp/Transformer-Series/checkpoints/detr-r50-e632da11.pth --coco_path /root/autodl-tmp/coco
